--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-decorator==4.0.4
-EasyProcess==0.1.6
-fonttools==2.3
-jdcal==1.0
-matplotlib==1.3.1
-mpi4py==2.0.0
-numpy==1.8.1
-openpyxl==2.0.5
-Pillow==2.5.1
-Polygon==2.0.5
-pyparsing==2.0.2
-python-dateutil==2.2
-pytz==2014.4
-scipy==0.16.1
-six==1.7.3
-sobol-seq==0.1.2
-SquareMap==1.0.4
-TTFQuery==1.0.5
+decorator>=4.0.4
+EasyProcess>=0.1.6
+fonttools>=2.3
+ghalton>=0.6
+jdcal>=1.0
+matplotlib>=1.3.1
+mpi4py>=2.0.0
+numpy>=1.8.1
+openpyxl>=2.0.5
+Pillow>=2.5.1
+pyparsing>=2.0.2
+python-dateutil>=2.2
+pytz>=2014.4
+scipy>=0.16.1
+six>=1.7.3
+sobol-seq>=0.1.2
+SquareMap>=1.0.4
+TTFQuery>=1.0.5
