--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyparsing>=2.0.2
 python-dateutil>=2.2
 pytz>=2014.4
 scipy>=0.16.1
+schwimmbad==0.3.0
 six>=1.7.3
 sobol-seq>=0.1.2
 SquareMap>=1.0.4
